# epfl-security-and-verifiablity

./: .gitignore
client/: package-lock.json  package.json
client/app/: layout.tsx  page.tsx
client/app/create-meet/: page.tsx
client/app/join-meet/: page.tsx
client/app/meet-details/: page.tsx
client/components/: join-meet-dialog.tsx  theme-provider.tsx  wallet-connect.tsx  wallet-required-dialog.tsx
client/context/: meet-context.tsx  wallet-context.tsx
client/services/: psiService.ts
hyle-0.12.1/examples-main/simple-identity/contract/src/: lib.rs
hyle-0.12.1/examples-main/simple-identity/host/src/: main.rs
hyle-0.12.1/template-risc0-main/contract/: Cargo.toml  main.rs
hyle-0.12.1/template-risc0-main/contract/src/: lib.rs
hyle-0.12.1/template-risc0-main/contract/src/fhe_old/: main.rs
hyle-0.12.1/template-risc0-main/host/src/: main.rs
server/: Cargo.toml
server/src/: fhe.rs  main.rs
